@@ -239,7 +239,7 @@ a:hover
 	margin-right:  auto;
 	border-radius: 5px;
 	overflow: hidden;
-	border: 4px solid #394263;
+	border: 2px ridge darkgray
 }
 
 .subjectContainer table 
@@ -824,4 +824,10 @@ button
 	padding-left: 8px;
 	margin-top: 3px;
 	margin-bottom: 3px;
+}
+
+.noProposalsAvailable 
+{
+	margin: 0.25em 0.5em;
+	color:  #394263;
 }
